fix: Not enough contrast for the "review tuleap" icon
The heart introduced at git #tuleap/stable/05fbc6adb25c35637f9c066b9ac94bef06b8ed56
is too vibrant to be displayed on a dark background and does not offer
enough contrast. We should use the text-on-dark version instead.

Furthermore the margin of the icon has been increased for tlp dropdown
to offer more readability.

Closes request #20953: Not enough contrast for the "review tuleap" icon

--- a/src/themes/BurningParrot/css/includes/_help-dropdown.scss
+++ b/src/themes/BurningParrot/css/includes/_help-dropdown.scss
@@ -17,6 +17,9 @@
  * along with Tuleap. If not, see <http://www.gnu.org/licenses/>.
  */
 
+@use 'sass:map';
+@use '../../../tlp/src/scss/variables/colors/swatch-colors';
+
 .help-dropdown {
     position: fixed;
     z-index: 1000;
@@ -104,7 +107,7 @@
             }
 
             > .review-link-icon {
-                color: $tlp-swatch-fiesta-red-text;
+                color: map.get(map.get(swatch-colors.$tlp-swatch-color-map, 'fiesta-red'), 'text-on-dark');
             }
         }
 
