--- a/src/themes/FlamingParrot/css/utils/_help-dropdown.scss
+++ b/src/themes/FlamingParrot/css/utils/_help-dropdown.scss
@@ -17,6 +17,9 @@
  * along with Tuleap. If not, see <http://www.gnu.org/licenses/>.
  */
 
+@use 'sass:map';
+@use '../../../tlp/src/scss/variables/colors/swatch-colors';
+
 .dropdown-menu-item {
     padding: 8px 16px;
     white-space: nowrap;
@@ -128,7 +131,7 @@
         }
 
         > .review-link-icon {
-            color: $tlp-swatch-fiesta-red-text;
+            color: map.get(map.get(swatch-colors.$tlp-swatch-color-map, 'fiesta-red'), 'text-on-dark');
         }
     }
 
